# jabba

./: README.md  package.json  pyproject.toml  readme
client/angular/angular-hello-world/: package-lock.json
client/ionic/ionic-hello-world/: package-lock.json  package.json
client/quasar/quasar-hello-world/: package-lock.json  package.json
client/vue/vue-hello-world/: README.md  package.json
desktop/electron-react/: package.json
mobile/ionic/: package-lock.json  package.json
quasar/: package-lock.json  package.json
servers/django/: db.sqlite3  manage.py
servers/django/api/: utils.py  views.py
servers/django/core/: settings.py  urls.py
servers/django/core/migrations/: 0001_initial.py
servers/django/jabba/: asgi.py  settings.py  urls.py  wsgi.py
web/cra/: package.json
web/cra/src/: App.tsx
web/cra/src/components/: Dashboard.tsx
web/cra/src/layouts/: MainLayout.tsx
web/cra/src/pages/: HomePage.tsx
web/next/: package.json
web/ng/: README.md  package-lock.json  package.json
web/quasar/: package-lock.json  package.json  quasar.conf.js
web/vue/: package.json
